--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/blog.css">
     <title>afran shajib</title>
 </head>
 <body>
+    <div>
+        <h3>My name is shajib</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore illo, ex possimus voluptatibus illum eligendi perferendis! Repudiandae nostrum vero dolore ullam expedita cumque iure corporis voluptas illum, libero illo ad.</p>
+    </div>
     
 </body>
 </html>
