add my third bolg

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 <body>
     <div>
-        <h3>My name is shajib</h3>
+        <h3>My first blog</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore illo, ex possimus voluptatibus illum eligendi perferendis! Repudiandae nostrum vero dolore ullam expedita cumque iure corporis voluptas illum, libero illo ad.</p>
+    </div>
+    <div>
+        <h3>My second clog</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore illo, ex possimus voluptatibus illum eligendi perferendis! Repudiandae nostrum vero dolore ullam expedita cumque iure corporis voluptas illum, libero illo ad.</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore illo, ex possimus voluptatibus illum eligendi perferendis! Repudiandae nostrum vero dolore ullam expedita cumque iure corporis voluptas illum, libero illo ad.</p>
     </div>
     
